Fixing css update not showing

--- a/assets/css/master.css
+++ b/assets/css/master.css
@@ -391,7 +391,7 @@ nav ul li a {
 }
 
 .arg-container p {
-      margin: 16px;
+      margin: 15px;
       font-size: 16px;
       line-height: 1.8em;
 }
